@@ -1,3 +1,5 @@
+* #2543: Offer multiple activities for opening clipboard objects.
+
 Snapshot d93122bf5e
 
 * #2751 Add keybindings for max/min brightness/volume
